# rpcx-python

./: .gitignore  LICENSE  README.md  pyproject.toml  test_client.py  test_server.py  test_service.py
example/: test_client.py  test_server.py
example/res/: test_image.py
example/streaming/: server_stream.py
src/: __init__.py
src/rpcx/: message.py  server.py
test/: test_client.py  test_server.py  test_server_stream.py
test/unittest/: test_service.py
