[project]
name = "rpcx"
version = "0.0.1"
authors = [
  { name="Republicon", email="yangb@republicon.cn" },
]
description = "rpcxio python implementation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/by1e11/rpcx-python"
Issues = "https://github.com/by1e11/rpcx-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"